Updated Gradle to 6.2.2, migrated project to a multi-project gradle project