@@ -1,38 +1,82 @@
 plugins {
-	id 'java'
-	id 'application'
-	id 'org.beryx.jlink' version '2.10.3'
-	id "com.github.hierynomus.license" version "0.15.0"
+	id 'com.github.hierynomus.license' version '0.15.0' apply false
 }
 
-group 'parts.lost'
-version '1.0-SNAPSHOT'
-
-sourceCompatibility = 11
-mainClassName = "parts.lost.calcsystem.Calculate"
-
-repositories {
-	mavenCentral()
-}
-
-dependencies {
-	testCompile group: 'junit', name: 'junit', version: '4.12'
-}
-
-license {
-	header rootProject.file('HEADER')
-	strictCheck true
-
-	mapping {
-		java = "SLASHSTAR_STYLE"
+allprojects {
+	repositories {
+		jcenter()
 	}
 }
 
-jlink {
+subprojects {
+	version = '0.5.0'
+	group = 'parts.lost'
+}
 
-	options = ['--compress', '2']
+configure(subprojects) {
 
-	launcher {
-		name = 'launch'
+	apply plugin: 'com.github.hierynomus.license'
+
+	license {
+		header rootProject.file('HEADER')
+		strictCheck true
+
+		mapping {
+			java = "SLASHSTAR_STYLE"
+		}
+	}
+
+	afterEvaluate {
+		compileJava {
+			inputs.property("moduleName", moduleName)
+			doFirst {
+				options.compilerArgs.addAll([
+						'--module-path', classpath.asPath,
+						'--add-modules', moduleName
+				])
+				classpath = files()
+			}
+		}
 	}
 }
+
+
+
+//plugins {
+//	id 'java'
+//	id 'application'
+//	id 'org.beryx.jlink' version '2.10.3'
+//	id "com.github.hierynomus.license" version "0.15.0"
+//}
+//
+//group 'parts.lost'
+//version '1.0-SNAPSHOT'
+//
+//sourceCompatibility = 11
+//mainClassName = "parts.lost.calcsystem.Calculate"
+//
+//repositories {
+//	mavenCentral()
+//}
+//
+//dependencies {
+//	testCompile group: 'junit', name: 'junit', version: '4.12'
+//}
+//
+//license {
+//	header rootProject.file('HEADER')
+//	strictCheck true
+//
+//	mapping {
+//		java = "SLASHSTAR_STYLE"
+//	}
+//}
+//
+//jlink {
+//
+//	options = ['--compress', '2']
+//
+//	launcher {
+//		name = 'launch'
+//	}
+//}
